--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,29 @@
 .results-block {
   display: inline-block;
 }
+
+.no-padding {
+  padding: 0 !important;
+}
+
+left-padding {
+  padding-left: 1em !important;
+}
+
+.logout {
+  padding-left: 0;
+}
+
+.user-name {
+  padding-top: 1em;
+}
+
+.nav.navbar-right li {
+  .btn {
+    color: #fff !important;
+    margin-top: 5%;
+  }
+  .btn-danger:hover {
+    background-color: darken(#d9534f, 20%) !important;
+  }
+}
